# kirke

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: About.md  DoxygenLayout.xml  License.md  MainPage.md
kirke/: CMakeLists.txt
kirke/include/kirke/: allocator.h  array.h  error.h  hash_map.h  io.h  kirke.h  list.h  log.h  macros.h  math.h  split_iterator.h  string.h  system_allocator.h
kirke/src/: allocator.c  error.c  io.c  kirke.c  log.c  math.c  split_iterator.c  string.c  system_allocator.c
kirke/test/: test__libkirke.cpp  test__libkirke__allocator.cpp  test__libkirke__array.cpp  test__libkirke__error.cpp  test__libkirke__hash_map.cpp  test__libkirke__io.cpp  test__libkirke__list.cpp  test__libkirke__log.cpp  test__libkirke__math.cpp  test__libkirke__split_iterator.cpp  test__libkirke__string.cpp  test__libkirke__system_allocator.cpp
